// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TYIpcMusicControl components basic render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 140,
        "justifyContent": "center",
        "paddingBottom": 60,
      },
      Object {
        "position": "absolute",
        "top": 50,
      },
    ]
  }
>
  <TouchableOpacity
    activeOpacity={0.7}
    key="mode"
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "tintColor": "#000",
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
  <TouchableOpacity
    activeOpacity={0.7}
    key="prev"
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "tintColor": "#000",
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
  <TouchableOpacity
    activeOpacity={0.7}
    key="control"
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "tintColor": "#000",
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
  <TouchableOpacity
    activeOpacity={0.7}
    key="next"
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "tintColor": "#000",
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
  <TouchableOpacity
    activeOpacity={0.7}
    key="list"
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "tintColor": "#000",
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`TYIpcMusicControl components render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 140,
        "justifyContent": "center",
        "paddingBottom": 60,
      },
      Object {},
    ]
  }
>
  <TouchableOpacity
    activeOpacity={0.7}
    key="mode"
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "tintColor": "#000",
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
  <TouchableOpacity
    activeOpacity={0.7}
    key="prev"
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "tintColor": "#000",
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
  <TouchableOpacity
    activeOpacity={0.7}
    key="control"
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "tintColor": "#000",
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
  <TouchableOpacity
    activeOpacity={0.7}
    key="next"
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "tintColor": "#000",
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
  <TouchableOpacity
    activeOpacity={0.7}
    key="list"
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "tintColor": "#000",
          },
          undefined,
        ]
      }
    />
  </TouchableOpacity>
</View>
`;
